# GN2PG

./: .dockerignore  .editorconfig  .env.sample  .flaskenv  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.debug.yml  docker-compose.yml  docker-entrypoint.sh  isort.cfg  pavement.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml  labeler.yml  releaser.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: checks.yml  codeql-analysis.yml  documentation.yml  publish.yml
data/source_samples/: geonature_export_sinp_with_cd_nomenclature.sql  geonature_export_sinp_with_metadata.sql
docs/: Makefile  app_dashboard.rst  changelog.rst  conf.py  dashboard.rst  gn2pg.rst  howto.rst  index.md  index.rst  make.bat  requirements.txt
docs/development/: documentation.md  environment.md  gn2pg.md  modules.md  packaging.md  testing.md  translation.md
docs/source/: README  changelog.rst  conf.py  geonature.rst  gn2gn.rst  gn2pg.rst  howto.rst  import_gn.rst  index.rst  modules.rst  process.rst  requirements.txt
docs/usage/: dashboard.md  howto.md  install.md  process.md
geonature/: __init__.py  api.py
gn2gn/: __init__.py  api.py  check_conf.py  download.py  env.py  log_conf.py  main.py  metadata.py  store_postgresql.py  transfer_gn.py  utils.py
gn2gn/data/: geonature.sql  gn2gnconfig.toml  to_geonature.sql
gn2gn_client/: __init__.py  main.py  metadata.py  toml_parser.py
gn2gn_client/data/: gn2gnconfig.toml
gn2pg/: __init__.py  api.py  check_conf.py  download.py  env.py  helpers.py  logger.py  main.py  metadata.py  store_postgresql.py  utils.py
gn2pg/app/: admin_views.py  app.py  config.py  database.py  env.py  index.py  models.py
gn2pg/app/static/css/: custom_flaks_admin.css
gn2pg/app/templates/: index.html
gn2pg/app/templates/admin/: master.html
gn2pg/app/utils/: admin_views.py
gn2pg/data/: gn2pgconfig.toml  synthese_from_label.sql  to_gnsynthese.sql
gn2pg/locale/en_US/LC_MESAGES/: gn2pg.po
gn2pg/locale/fr_FR/LC_MESSAGES/: gn2pg.po  gn2pg.po~  import_gn.po
import_gn/: __init__.py  api.py  check_conf.py  download_gn.py  metadata.py  regulator.py  store_all.py  store_file.py  store_postgresql.py  transfer_gn.py  utils.py
import_gn/data/: gn2gnconfig.toml
import_gn/locale/fr_FR/LC_MESSAGES/: import_gn.po
install/: 01_set_config_htaccess.sh  02_install_app.sh  config_htaccess.sh  install_app.sh  settings.ini.sample  settings.sample  utils
install/assets/: gn2pg.service  gn2pg_apache.conf  gn2pg_virtualhost.conf  log_rotate  tmpfiles-gn2pg.conf
tests/: README.md  conftest.py  scratch.py  scratch_login.py  test_api.py  test_check_conf.py  test_download.py  test_main.py
tests/fixtures/: api.py  check_conf.py  db.py  download.py  models.py  store_postgresql.py
tests/test_app/test_config/: test_config.py
